# reward_fm

./: .gitignore  .gitmodules  Dockerfile  EVAL_ADDITIONAL_LIBERO.md  FINETUNE_ROBOMETER.md  GVL.py  Makefile  README.md  REBASE_SUMMARY.md  RUN.md  RUN_EVALS.md  check_dataset_status.py  consolidate_datasets.py  count_trajectories.py  create_libero_hf_dataset.py  data_generator.py  dataset_stats.py  download_additional_libero_simple.sh  download_libero_datasets.sh  eval_additional_libero_simple.sh  eval_local_datasets.sh  eval_missing_datasets.sh  eval_vlm.py  extract_results.py  fsdp.yaml  local_eval_config.yaml  parse_results.py  preprocess_datasets.py  process_additional_libero.sh  processed_datasets  pyproject.toml  requirements.lock.txt  run_eval_only.py  run_fsdp.sh  setup.py  setup.sh  setup_utils.py  test_single_eval.sh  test_vlm_server.py  train.py  (+6 more)
configs/: config.yaml  data_gen.yaml
data/: README.md  README_ADDING_DATASETS.md  agibotworld_loader.py  batch_collator.py  data_generator.py  dataset_types.py  dpo_collator.py  generate_hf_dataset.py  helpers.py  libero_loader.py  validate_dataset.py
data/dataset_guides/: AgiBotWorld.md  CustomDataset.md  README.md
data_preprocess/: generate_hf_dataset.py  validate_dataset.py
data_preprocess/dataset_loaders/: mw_collected_loader.py  roboarena_loader.py
dataset_upload/: README.md  generate_hf_dataset.py  helpers.py  validate_dataset.py  video_helpers.py  visualize_dataset.py
dataset_upload/dataset_guides/: AgiBotWorld.md  AutoEval.md  CustomDataset.md  EPIC-KITCHENS.md  EgoCoT.md  EgoDex.md  FailSafe.md  FinoNet.md  Galaxea.md  H2R.md  HAND_paired.md  HumanoidEveryday.md  LIBERO.md  MIT_ROBOT_PRANK.md  MoTiF.md  MolmoAct.md  NewMITFranka.md  OXE.md  Ph2d.md  RACER.md  README.md  RoboArena.md  RoboReward.md  SOAR.md  USC_KOCH_HUMAN_ROBOT_PAIRED.md  USC_KOCH_P_RANKING.md  UTD_SO101_CLEAN_POLICY_RANKING.md
dataset_upload/dataset_helpers/: generate_soar_labels_vlm.py  oxe_helper.py
dataset_upload/dataset_loaders/: agibotworld_loader.py  autoeval_loader.py  egocot_loader.py  egodex_loader.py  epic_loader.py  failsafe_loader.py  fino_net_loader.py  galaxea_loader.py  h2r_loader.py  hand_paired_loader.py  humanoid_everyday_loader.py  koch_arm_ut_dallas_loader.py  libero_loader.py  mit_franka_prank_loader.py  molmoact_loader.py  motif_loader.py  mw_collected_loader.py  mw_task_annotations.py  new_mit_franka_loader.py  oxe_loader.py  ph2d_loader.py  racer_loader.py  roboarena_loader.py  robofac_loader.py  robofail_loader.py  roboreward_loader.py  soar_loader.py  usc_franka_policy_ranking_loader.py  usc_koch_human_robot_paired_loader.py  usc_koch_p_ranking_loader.py  usc_xarm_policy_ranking_loader.py  utd_so101_clean_policy_ranking_loader.py
docker/: entrypoint.sh  reserve.sbatch  setup.sh
docs/: MOLMO2_INTEGRATION.md
eval_commands/: confusion_matrix.sh  policy_ranking.sh  reward_alignment.sh
evals/: compile_results.py  create_progress_plots.py  eval_config.yaml  eval_config_local.yaml  eval_metrics_utils.py  eval_server.py  eval_utils.py  qwen_server.py  rewind_server.py  run_all_evals.sh  run_all_evals_rewind.sh  run_eval_only.py  run_model_eval.py  run_model_eval_rewind.py  sample_eval_request.py  server.py
evals/baselines/rlvlmf_base/: README.md  eval_config.yaml  pyproject.toml  vlm_baseline.py  vlm_server.py
evals/baselines/rlvlmf_base/test/: test_vlm.py
evals/baselines/rlvlmf_base/test_logs/: vlm_eval_20250813_213237.json
evals/scripts/: run_vlm_eval_simple.sh
libero/: rerender_all.sh
models/: rfm.py
rfm/configs/: baseline_eval_config.yaml  config.yaml  eval_config.yaml  eval_config_rewind.yaml  eval_config_server.yaml  eval_configs.py  eval_only_config.yaml  experiment_configs.py  fsdp.yaml  fsdp_rewind.yaml  fsdp_train.yaml  preprocess.yaml  rewind_jh_cfg.yaml  rewind_jh_cfg_new.yaml  rewind_transformer.yaml  rewind_transformer_config.yaml  rewind_transformer_scaled.yaml  transformer_config.yaml  vqa.yaml  vqa_config.yaml
rfm/data/: README.md  base_collator.py  batch_collator.py  data_generator.py  dataset.py  dataset_category.py  dataset_success_cutoff.txt  dataset_types.py  datasets.py  generate_hf_dataset.py  helpers.py  rewind_batch_collator.py  validate_dataset.py  video_helpers.py  visualize_dataset.py  vqa_batch_collator.py
rfm/evals/: EVAL_SERVER_README.md  README.md  baseline_eval_server.py  compile_results.py  compute_confusion_metric.py  confusion_matrix_eval.py  eval_metrics_utils.py  eval_server.py  eval_utils.py  eval_viz_utils.py  parse_results.py  parse_results_ablation.py  run_baseline_eval.py  run_eval.py  run_eval_only.py  sample_eval_request.py  use_eval_server_standalone.py
rfm/models/: __init__.py  heads.py  rewind_transformer.py  rewind_transformer_scale.py  rfm.py  rfm_old.py  rfm_text.py  rfm_transformer.py  rfm_vqa.py  utils.py
run_scripts/: rfm_qwen_4gpu_bs12_pref_prog.sbatch  rfm_qwen_4gpu_bs12_pref_prog_sim.sbatch  rfm_qwen_4gpu_bs12_prog_only.sbatch  rfm_qwen_4gpu_bs12_prog_only_2frames.sbatch  rfm_qwen_4gpu_bs12_prog_only_8frames_absolute.sbatch  rfm_qwen_4gpu_bs12_prog_only_images.sbatch  rfm_rewind_bs1024_pref_prog.sbatch  rfm_rewind_bs1024_pref_prog_sim.sbatch  rfm_rewind_bs1024_prog_only.sbatch  rfm_rewind_bs1024_prog_only_mw_reproduce.sbatch  rfm_rewind_pref_prog.sbatch  rfm_rewind_pref_prog_sim_succ.sbatch  rfm_rewind_prog_only.sbatch  rfm_rewind_prog_succ.sbatch  rfm_smolvlm_4gpu_bs12_prog_only.sbatch
scripts/: VQA_DATASET_README.md  VQA_TRAINING_README.md  VQA_TRAINING_SUMMARY.md  benchmark_vlm.py  convert_lerobot_common.py  convert_lerobot_to_h5.py  delete_hf_model.py  download_data.sh  download_processed_datasets.sh  evaluate_vqa.py  example_inference.py  generate_full_vqa_dataset.sh  generate_roboreward_vqa_dataset.sh  generate_sweep.py  generate_vqa_dataset.py  preprocess.yaml  preprocess_datasets.py  relabel_h5_rewards.py  train.sh  train_debug.sh  train_rewind.sh  train_vqa.sh  train_vqa_debug.sh  train_vqa_sft.py  untar_processed_datasets.sh  upload_to_hub.py  validate_hf_dataset.py
sweeps/: qwen.yaml  rewind_transformer.yaml
(+288 files in other folders)
