[project]
name = "reward-fm"
version = "0.0.1"
description = "PyTorch implementation of a Reward Foundation Model (RFM)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Anthony Liang", email = "aliang80@usc.edu" }
]

dependencies = [
    "accelerate>=1.9.0",
    "datasets>=3.6.0",
    "einops>=0.8.0",
    "evaluate>=0.4.3",
    "h5py>=3.10.0",
    "huggingface-hub[hf-xet]>=0.33.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "peft>=0.16.0",
    "pyrallis>=0.3.0",
    "safetensors>=0.6.0rc0",
    "sentence-transformers>=2.0.0",
    "torch>=2.4.0",
    "transformers==4.53.2",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
    "pyyaml>=6.0.0",
    "rich>=14.0.0",
    "soundfile>=0.13.1",
    "ipdb>=0.13.13",
    "hf_transfer>=0.1.0",
    "gradio>=4.0.0",
    "pillow>=9.0.0",
    "ffmpeg",
    "opencv-python-headless>=4.8.0",
    "termcolor>=3.1.0",
    "qwen-vl-utils>=0.0.11",
    "torchvision>=0.23.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "requests>=2.32.4",
    "torchcodec>=0.6.0",
    "tensorflow-datasets>=4.9.9",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "scipy>=1.15.3",
]

[project.urls]
Repository = "https://github.com/aliang8/reward_fm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rfm"]

[tool.ruff]
line-length = 120
target-version = "py310"
